bitfields/tests/compile_error_cases/errors/bitfield_invalid_bitfield_write_endian_value.stderr
error: Invalid endian argument '123'. Valid values are 'little' or 'big'.
 --> tests/compile_error_cases/errors/bitfield_invalid_bitfield_write_endian_value.rs:3:32
  |
3 | #[bitfield(u32, write_endian = 123)]
  |                                ^^^

error: Invalid endian argument 'invalid'. Valid values are 'little' or 'big'.
 --> tests/compile_error_cases/errors/bitfield_invalid_bitfield_write_endian_value.rs:9:32
  |
9 | #[bitfield(u32, write_endian = invalid)]
  |                                ^^^^^^^
